fix(pipeline_templates): wrap variable name (#3878)

--- a/app/scripts/modules/core/src/pipeline/config/templates/Variable.less
+++ b/app/scripts/modules/core/src/pipeline/config/templates/Variable.less
@@ -8,5 +8,7 @@
   code {
     color: black;
     margin-right: 3px;
+    max-width: 100px;
+    word-break: break-all;
   }
 }
